# consort

./: .gitignore  .gitmodules  .latexmkrc  .travis-ci.sh  .travis.yml  2cfa-example.smt  2cfa-inference.smt  Makefile  README.md  appendix-aux.otex  appendix-preservation.otex  appendix-progress.otex  appendix-thm1.otex  appendix.otex  bcpproof.sty  bcprules.sty  benchmark_table.tex  conclusion.otex  consort_table.tex  examples.otex  experiments.otex  impl.otex  intro.otex  jayhorn_table.tex  lang.ott  local.tex  main.bbl  main.bib  main.blg  main.dvi  main.otex  main.tex  preliminaries.otex  push-pull-inference.smt  related_work.otex  semantics.otex  stats.tex  typesystem.otex  wf_rules.otex
src/: .gitignore  .merlin  Makefile  README.md  argOptions.ml  ast.ml  astPrinter.ml  astUtil.ml  astUtil.mli  callMoCHi.ml  cleanPTE.ml  conditional.imp  config.yml  consort.ml  consort.mli  contents.imp  convMoCHi.ml  counterExample.ml  counterExampleDAG.ml  counterexample.ml  counterexampleOwnership.ml  dune  dune-project  eldaricaBackend.ml  eldaricaLexer.mll  eldaricaParser.mly  eval.ml  extLib.ml  externalFileBackend.ml  files.ml  flowBackend.ml  flowInference.ml  flowInference.mli  genFlags.ml  genLin.ml  greek.ml  hoiceBackend.ml  hornBackend.ml  imp.el  inference.ml  (+70 more)
src/alex-tests/: recursive-object.imp  recursive-object1.imp  run.sh  tuple1.imp  tuple2.imp  tuple3.imp  tuple4.imp  tuple5.imp
src/benchmarks/: run_jayhorn.py
src/benchmarks/jayhorn/: SatAckermann01.imp  SatAckermann02.imp  SatAckermann03.imp  SatAddition01.imp  SatAddition02.imp  SatAliasing01.imp  SatAliasing02.imp  SatAliasing02_CON.imp  SatArray.imp  SatArray_CON.imp  SatBranches.imp  SatConstructor.imp  SatCopies.imp  SatCopy.imp  SatEvenOdd01.imp  SatFibonacci01.imp  SatFibonacci02.imp  SatFibonacci03.imp  SatFieldCopy.imp  SatGcd.imp  SatHanoi.imp  SatInit.imp  SatInstances.imp  SatInterproc.imp  SatIssue66.imp  SatLoopAndField.imp  SatMccarthy91.imp  SatObjectArray.imp  SatObjectArray2.imp  SatOverwrite.imp  SatPrimes.imp  SatPrimes01.imp  SatRef.imp  SatSetField.imp  SatSetGet.imp  SatSum.imp  SatTrivial.imp  SatTwoCalls.imp  SatTwoCalls_CON.imp  SatTwoInstances.imp  (+34 more)
src/benchmarks/minepump/: README.md  actions.imp  compile_variant.py  environment.imp  main.imp  monolithic.imp  mwrap
src/cex-test/: cex_gen_example.imp  compare_jayhorn.imp  result_list_example.imp
src/cex-test/result/: cex_gen_example.out  compare_jayhorn.out  ownership_slice.out  result_array_example.out  result_list_example.out  unsafe_slice.out
src/challenge-problem/: array_list.imp  array_list_direct.imp  array_list_nd.imp  array_list_nd_tight.imp  array_list_tight.imp  array_list_trunc.imp  direct-encoding.smt
src/concurrency/pprint/: toomany_locks.imp
src/concurrency/simple-check/: array.imp  dup_arg.imp  dup_arg2.imp  dup_arg3.imp  newlock_acq_rel.imp  ref_to_lock.imp  same.imp  sample.imp  shadowing.imp
src/concurrent/parsing/: acq.imp  counter.imp  fork.imp  freelock.imp  newlock.imp  rel.imp
src/concurrent/pprint/: fork.imp
src/concurrent/simple-check/: fail.imp  seq.imp
src/jayhorn-tests/: FalseNegative.java  Havoc_Class.java  LingerDec.java  LoopSimple.java  Null.java  RecSimple.java  RecSimple2.java  Trivial.java  run_tests.sh
src/liu-tests/: bad_ref_obj.imp  bad_tuple_obj.imp  good_tuple_obj.imp
src/liu-tests/experiment/: append-list-2-BUG.imp  append-list-2.imp  append-list-BUG.imp  append-list.imp  dec-tree-2-BUG.imp  dec-tree-2.imp  dec-tree-BUG.imp  dec-tree.imp  inc-list-2.imp  inc-list-BUG.imp  inc-list-bug-2.imp  inc-list.imp  inc-tree-2-BUG.imp  inc-tree-2.imp  inc-tree-BUG.imp  inc-tree.imp  insert-list-BUG.imp  insert-list.imp  mu_tuple.imp  mutable-const-tree.imp  mutable-val-list-BUG.imp  mutable-val-list.imp  mutable-val-tree-BUG.imp  mutable-val-tree.imp  prepend-list-2-BUG.imp  prepend-list-2.imp  prepend-list-BUG.imp  prepend-list.imp  simple_tree-BUG.imp  simple_tree.imp
src/my-example/Hoteisiki/: Hoteisiki31.java  Hoteisiki32.imp  Hoteisiki32.java  Hoteisiki32_ref.imp  Hoteisiki32_single.java
src/my-example/find_n/: find_n.imp  find_n.java  find_n_single.java  find_n_square.imp  find_n_square.java  find_n_square_goto.imp  find_n_square_goto.java  find_n_square_goto_single.java  find_n_square_single.java
src/my-example/others/: bad-example.imp  bad-example2.imp  bad-example3.imp  call_in_expr.java  example1.imp  example2.imp  jimple_example.java  my-example1.imp  my_example.java  my_example2.java  not-bad-example.imp  regnant_example.java  simple1.imp  sum1.java  sum_break.java  sum_continue.java  sum_goto.java  sum_square.java  sum_square_one_break.java  zero-length-array.imp
src/my-example/sum/: sum1.imp  sum1.java  sum1_single.java  sum2.imp  sum2.java  sum2_break.java  sum2_single.java
src/my-example/work-dir/: control.sexp  java.intr  mono.imp
src/negative-tests/: bad-alias.imp  example-6-bad.imp  example-6-bad2.imp  gen-ref1-missing-alias.imp  havoc-writes.imp  intro2_BAD.imp  nullity-checking.imp  shuffle-in-call.imp  simple-bad.imp  swapping_BAD.imp
src/pepm-tests/: ownership_slice.imp  unsafe_slice.imp
src/positive-tests/: assume-zero.imp  assume_positive.imp  assume_positive_ref.imp  compare.imp  complex_op.imp  conjoin.imp  dep-tuple.imp  example-1.imp  example-3.imp  example-4.imp  example-5.imp  example-6-typable.imp  flow-sensitive-example.imp  gamma.imp  gen-ref1.imp  gen-ref2.imp  inline_assume.imp  intro-example-old.imp  intro-fig1.imp  intro-fig2.imp  intro2.imp  maybe-null.imp  min-int.imp  min-pointer.imp  multi-assign.imp  nested-pointer.imp  nested-tup.imp  null-prop.imp  nullity-tracking.imp  propagate.imp  ptr.imp  push-pull-decr.imp  push-pull-rich.imp  push-pull.imp  reachability.imp  recursive-direct.imp  recursive.imp  relation-ptr.imp  relation.imp  relational-param.imp  (+14 more)
src/ppx_cast/: dune  ppx_cast.ml
src/regnant/: .gitignore  .travis-ci.sh  README.md  build.gradle  integration-test.py  mk-minepump-corpus.py  regnant.py  test-minepump.py
src/stdlib/: .gitignore  lin-std.smt
src/test/: test.imp
src/with_monad/: dune  with_monad.ml
(+364 files in other folders)
