(menhir (modules parser) (flags "--table"))
(ocamllex lexer)

(library
 (name util)
 (preprocess (pps ppx_sexp_conv ppx_let with_monad ppx_custom_printf ppx_cast))
 (wrapped false)
 (libraries sexplib menhirLib)
 (modules StringMap UnionFind PrettyPrint Files SexpPrinter Greek Std Log))

(library
 (name options)
 (wrapped false)
 (libraries util)
 (modules ArgOptions))

(library
 (name lang)
 (preprocess (pps ppx_sexp_conv ppx_let with_monad ppx_custom_printf ppx_cast))
 (wrapped false)
 (libraries sexplib util)
 (modules Parser Ast SurfaceAst AstPrinter SimpleChecker Lexer LabelManager SimpleTypes RefinementTypes Paths AstUtil Intrinsics Locations))

(library
 (name solving)
 (preprocess (pps ppx_sexp_conv ppx_let with_monad ppx_custom_printf ppx_cast))
 (wrapped false)
 (libraries util)
 (modules Z3Channel Solver SolverBridge Process))

(library
 (name ownership)
 (preprocess (pps ppx_sexp_conv ppx_let with_monad ppx_custom_printf ppx_cast))
 (wrapped false)
 (libraries lang util solving)
 (modules OwnershipInference OwnershipSolver))

(library
 (name consort)
 (preprocess (pps ppx_sexp_conv ppx_let with_monad ppx_custom_printf ppx_cast))
 (wrapped false)
 (libraries sexplib util lang str solving ownership)
 (modules KCFA HornBackend SmtBackend
          Z3BasedBackend Consort
          HoiceBackend NullSolver
          ExternalFileBackend EldaricaBackend ParallelBackend
          FlowInference FlowBackend))

(executable
 (name test)
 (preprocess (pps ppx_sexp_conv ppx_let with_monad ppx_custom_printf ppx_cast))
 (libraries consort yaml)
 (modules Test))

(executable
 (name test_suite)
 (preprocess (pps ppx_sexp_conv ppx_let with_monad ppx_custom_printf ppx_cast))
 (libraries consort)
 (modules Test_suite))

(executable
 (name genLin)
 (preprocess (pps ppx_sexp_conv ppx_let with_monad ppx_custom_printf ppx_cast))
 (libraries lang)
 (modules genLin))

(executable
 (name typecheck)
 (preprocess (pps ppx_sexp_conv ppx_let with_monad ppx_custom_printf ppx_cast))
 (libraries lang)
 (modules Typecheck))

(executable
 (name ownership)
 (preprocess (pps ppx_sexp_conv ppx_let with_monad ppx_custom_printf ppx_cast))
 (libraries ownership)
 (modules Ownership))
            
(executable
 (name unsatCore)
 (preprocess (pps ppx_sexp_conv ppx_let with_monad ppx_custom_printf ppx_cast))
 (libraries util sexplib)
 (modules UnsatCore))

(executable
 (name genFlags)
 (preprocess (pps ppx_sexp_conv ppx_let with_monad ppx_custom_printf ppx_cast))
 (libraries lang)
 (modules genFlags))
